--- a/index.html
+++ b/index.html
@@ -3,22 +3,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
+    <!-- create a div with an id called map -->
+    <div id="map"></div>
+    <!--Add google map api script. -->
 
-  <!-- create a div with an id called map -->
-
-
-  <!--Add google map api script. -->
-
-    <!-- <script
-      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"
+    <script
       async
       defer
-    ></script> -->
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9BFICUOOViwXjbKJXlrAfG5jGfqp0Beg&callback=initMap"
+    ></script>
 
-    <script src="/map.js"></script>
+    <script src="map.js"></script>
   </body>
 </html>
