--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script
       async
       defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9BFICUOOViwXjbKJXlrAfG5jGfqp0Beg&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY>&callback=initMap"
     ></script>
 
     <script src="map.js"></script>
